examples/datalog/14_aggregations/37_count_with_join.dl
% Test: Count after join
% Expected: Count joined results
% Category: 14_aggregations
% Priority: P2 - Aggregation patterns

.kg create test_count_join
.kg use test_count_join

+orders[(1, "Alice"), (2, "Bob"), (3, "Alice"), (4, "Carol")].
+vip[("Alice",), ("Bob",)].

% Count VIP orders
vip_order_count(<COUNT:OId>) :- orders(OId, Name), vip(Name).

?- vip_order_count(N).

.kg use default
.kg drop test_count_join
